修改字体颜色

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="btn orange" ng-click="save()">save ...</div>
     <div class="btn green" ng-click="open()">open ...</div>
 
-    <textarea ng-model="markdown" id="tab" class="container-up" style="background:transparent;border-style:none;outline:none;font-size:20px;font-weight:bold;color:#3366FF"></textarea>
+    <textarea ng-model="markdown" id="tab" class="container-up" style="background:transparent;border-style:none;outline:none;font-size:20px;font-weight:bold;color:#3366CC"></textarea>
     <hr class="style-eight">
     <div ng-bind-html="markdown|m2c" class="container-down" contenteditable='false' id="cc"></div>
   </div>
