--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <script src="app/libs/tab.js"></script>
   <script src="app/libs/marked.js"></script>
+  <!--<script src="app/libs/markdown.js"></script>-->
   <script src="app/libs/angular.js"></script>
   <script src="app/app.js"></script>
 </body>
